# TE3001B_Robotics_Fundamentals_DT

./: .gitignore  3dof.urdf  README.md  animation_robot.asv  animation_robot.m  letters.json
NLP/: ss.py
PI_controller/: PIController.ino
PI_controller/Matlab_analisis/: SimulacionPI_DCMotor.m
PI_controller/ROS/reto_final/: package.xml  setup.py
PI_controller/ROS/reto_final/launch/: reto_final_launch.py
PI_controller/ROS/reto_final/reto_final/: set_point.py  signal_generator.py
PI_controller/microROS/motor_controller/: motor_controller.ino
PI_controller/microROS/motor_test/: motor_test.ino
PI_controller/microROS/oldPIController/: PIController.ino
PI_controller/ros_ws/src/reto_final/: setup.py
PI_controller/ros_ws/src/reto_final/config/: params.yaml
PI_controller/ros_ws/src/reto_final/launch/: reto_final_launch.py
PI_controller/ros_ws/src/reto_final/reto_final/: csv_recorder.py  set_point.py  signal_generator.py
Simulation/: graph.java  node.java
Simulation/Processing/Graph_Testing/: Graph.pde  Graph_Testing.pde  Node.pde  robot.pde
drawing_ws/src/eef_draw/: CMakeLists.txt  package.xml
drawing_ws/src/eef_draw/scripts/: eef_draw.py
drawing_ws/src/figure_msgs/: CMakeLists.txt  package.xml
drawing_ws/src/figure_msgs/msg/: Figure.msg
drawing_ws/src/figure_msgs/srv/: path_generator.srv
drawing_ws/src/figure_path_maker/: CMakeLists.txt  package.xml  setup.cfg  setup.py
drawing_ws/src/figure_path_maker/figure_path_maker/: figure_parameters.py  path_generator.py
drawing_ws/src/figure_path_maker/src/: path_generator.py
drawing_ws/src/hri/: CMakeLists.txt  backup  package.xml
drawing_ws/src/hri/hri/: hello-world.py  hello.py  nlp.py  spacy_utils.py  speak.py  speech_to_text.py  whisper.py
drawing_ws/src/hri/scripts/: install_deps.bash
drawing_ws/src/main_engine/: CMakeLists.txt  package.xml
drawing_ws/src/main_engine/launch/: main_engine.launch.py
drawing_ws/src/main_engine/src/: main_engine.cpp  path_action_server.cpp  test_xarm_planner_api_pose.cpp
drawing_ws/src/main_interfaces/: CMakeLists.txt  package.xml
drawing_ws/src/main_interfaces/action/: Follower.action
drawing_ws/src/main_interfaces/msg/: Figure.msg  PoseStampedArray.msg
drawing_ws/src/main_interfaces/srv/: PathGenerator.srv
drawing_ws/src/reto_final/: setup.cfg  setup.py
drawing_ws/src/reto_final/config/: params.yaml
drawing_ws/src/reto_final/launch/: reto_final_launch.py
drawing_ws/src/reto_final/reto_final/: set_point.py  signal_generator.py
drawing_ws/src/voice_drawing/: CMakeLists.txt  package.xml
drawing_ws/src/xarm_as/: CMakeLists.txt  package.xml
drawing_ws/src/xarm_as/action/: MoveArm.action
drawing_ws/src/xarm_as/include/xarm_as/: visibility_control.h
drawing_ws/src/xarm_as/launch/: _action_server.launch.py  xarm6_action_server.launch.py
drawing_ws/src/xarm_as/src/: xarm_action_client.cpp  xarm_action_server.cpp
jacobian_motion/simulation_ws/src/eef_publisher/: CMakeLists.txt  package.xml
jacobian_motion/simulation_ws/src/eef_publisher/scripts/: eef_publisher.py
jacobian_motion/simulation_ws/src/jacobian_simulation/: package.xml  setup.cfg  setup.py
jacobian_motion/simulation_ws/src/jacobian_simulation/config/: 3dofConfig.rviz
jacobian_motion/simulation_ws/src/jacobian_simulation/jacobian_simulation/: jacobian.py  jacobian_figure.py  joint_state_listener.py
jacobian_motion/simulation_ws/src/jacobian_simulation/launch/: demo.launch.py  triple_finger_ball_gui.launch.py  triple_finger_demo.launch.py  triple_finger_demo_gui.launch.py
jacobian_motion/simulation_ws/src/jacobian_simulation/urdf/: 3dof.urdf.xml  ball_object.urdf.xml  triple_3dof.urdf.xml
matlab_jaco/: 3dof.urdf  jaco.asv  jaco.m  jaco1fing.m  jaconoros.m  jaconoros2.m  nlp.py  ros_integration.m  triple_3dof_box_cheese.urdf
speech_drawing/: socket_client.py  speech_nlp.py  speech_nlp_say.py  speech_to_text.py
