<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xarm_as</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="A00833160@tec.mx">ros</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <buildtool_depend>tf2_geometry_msgs</buildtool_depend>


  <build_depend>moveit_common</build_depend>
  <build_depend>moveit_ros_planning</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  

  <depend>control_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>main_interfaces</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>moveit</exec_depend>
  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
